@@ -85,13 +85,10 @@ void PluginMessageThrottlerWin::messageThrottleTimerFired(Timer<PluginMessageThr
     if (message == m_back)
         m_back = 0;
 
+    // Protect the PluginView from destruction while calling its window proc.
+    // <rdar://problem/6930280>
+    RefPtr<PluginView> protect(m_pluginView);
     ::CallWindowProc(m_pluginView->pluginWndProc(), message->hWnd, message->msg, message->wParam, message->lParam);
-
-    // the PluginView could have been deleted during execution of its wndProc. 
-    if (!::IsWindow(message->hWnd)) {
-        delete message;
-        return;
-    }
 
     freeMessage(message);
 
